# modbus

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
include/: modbus.h
src/: modbus.c
test/: test_helpers.cc  test_helpers.h  test_main.c  test_master_read_reg.cc  test_master_write_reg.cc  test_slave_read_reg.c  test_slave_read_reg.cc  test_slave_read_reg.h  test_slave_write_reg.cc
tools/: add_0x_to_hex.py
